<resources>
    <string name="app_name">Notes</string>
    <string name="store_your_notes_here">Store Your Notes Here!</string>
    <string name="by_viraj">By Viraj</string>
    <string name="notes_app">Notes App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title...</string>
    <string name="subtitle">Subtitle...</string>
    <string name="notes">Notes..</string>
    <string name="dummy">Notes sdifgs f sgj sps fg sfpogs dfgslsifg sofjg sodfgj spdofjgspdofjgspdfg</string>
    <string name="_12_12_2012">12/12/2012</string>
    <string name="are_you_sure_you_want_to_delete_n_this_item">Are you sure you want to delete\n this item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="todo">TODO</string>
    <string name="todoo">TODO</string>
    <string name="all">All</string>
    <string name="alll">All</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="hey_custom_toast">Hey custom toast</string>

    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="logout">Logout</string>
</resources>