<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_height="match_parent">

    <View
        android:layout_width="130dp"
        android:layout_height="5dp"
        android:background="@color/etBackground"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_n_this_item"
        android:gravity="center"
        android:fontFamily="@font/font_one"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:padding="10dp"
        android:fontFamily="@font/font_two"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/yes_button"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/no_button"
        android:fontFamily="@font/font_two"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="10dp"
        android:text="@string/no" />
</LinearLayout>