<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#B2D9F8"
    android:layout_height="match_parent"
    tools:context=".UI.Fragments.EditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEditTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:padding="15dp"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/font_two"
            android:textColorHint="#A8D1F2"
            android:background="@drawable/edit_text_title"
            />
        <EditText
            android:id="@+id/etEditSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle"
            android:padding="15dp"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/font_two"
            android:textColorHint="#A8D1F2"
            android:background="@drawable/edit_text_title"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/redOval"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/red_oval"/>
            <ImageView
                android:id="@+id/yellowOval"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/done"
                android:background="@drawable/yellow_oval"
                app:tint="@color/black" />
            <ImageView
                android:id="@+id/greenOval"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/green_oval"/>

        </LinearLayout>

        <EditText
            android:id="@+id/etEditNotes"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_title"
            android:fontFamily="@font/font_two"
            android:gravity="start"
            android:hint="@string/notes"
            android:padding="15dp"
            android:textColorHint="#A8D1F2" />


    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbtnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="21dp"
        android:src="@drawable/done"
        android:theme="@style/fbtnDone"
        app:tint="@color/white"
        android:contentDescription="@string/todoo" />

</FrameLayout>